--- a/Ch01/01_03/project/about.html
+++ b/Ch01/01_03/project/about.html
@@ -7,8 +7,8 @@
 <body>
 
   <h1>About</h1>
-  <h2>Revision One</h2>
-  <p>The five boxing wizards jump quickly</p>
+  <h2>My Project</h2>
+  <p>今から頑張ってください。</p>
 
 </body>
 </html>
